# low-latency-options-pricing-engine

./: .gitignore  AUTHOR.md  CMakeLists.txt  LICENSE  README.md  pricing_demo
demonstrations/: DEPLOYMENT_SUMMARY.md  PERFORMANCE_RESULTS.md  performance_benchmark.txt
examples/: CMakeLists.txt  basic_pricing.cpp
include/math/: NormalDistribution.hpp  Optimization.hpp  Statistics.hpp
include/options/: AmericanOptions.hpp  BlackScholes.hpp  Greeks.hpp  ImpliedVolatility.hpp  MonteCarlo.hpp  PricingEngine.hpp
include/types/: Market.hpp  Option.hpp  Results.hpp
include/utils/: MemoryPool.hpp  ThreadPool.hpp  Timer.hpp
src/: demo_simple.cpp  main.cpp
tests/: CMakeLists.txt
tests/unit/: test_pricing_engine.cpp
